@@ -13,7 +13,7 @@
 
 
 
-#include "WINGs.h"
+#include <WINGs/WINGs.h>
 
 #include <unistd.h>
 #include <stdio.h>
