@@ -4,7 +4,7 @@
  */
 
 
-#include "WINGs.h"
+#include <WINGs/WINGs.h>
 
 #include <unistd.h>
 #include <stdio.h>
