@@ -1,0 +1,9 @@
+## automake input file for WINGs - Headers subdir
+
+AUTOMAKE_OPTIONS = no-dependencies
+
+# is this a kluge? if so, how should i do it?
+includedir = @includedir@/WINGs
+
+include_HEADERS = WINGs.h WUtil.h WINGsP.h
+
