@@ -1,7 +1,7 @@
 
 
 
-#include "WINGsP.h"
+#include <WINGs/WINGsP.h>
 
 
 
