@@ -3,6 +3,10 @@ changes since wmaker 0.63.1:
 - added WMRunModalLoop() and WMBreakModalLoop()
 - added WMSetBoxExpandsToParent()
 - added WMRemoveBoxSubview()
+- moved WINGs headers in a WINGs subdirectory when installed.
+  use #include <WINGs/header_file_name> in your application from now on.
+  Also updated get-{wings|wutil}-flags.
+
 
 changes since wmaker 0.62.1:
 ............................
